samples/_failures_safe/1761264631_8b8dfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_463dd831.c: In function ‘main’:
./samples/SAFE/__tmp_463dd831.c:198:9: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  198 |         print
      |         ^~~~~
      |         printf
./samples/SAFE/__tmp_463dd831.c:198:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_463dd831.c:198:14: error: expected ‘;’ at end of input
  198 |         print
      |              ^
      |              ;
./samples/SAFE/__tmp_463dd831.c:198:9: error: expected declaration or statement at end of input
  198 |         print
      |         ^~~~~
./samples/SAFE/__tmp_463dd831.c:198:9: error: expected declaration or statement at end of input
